[package]
name = "ravenserver-rs"
version = "0.1.0"
authors = ["nicohman <nicohman@demenses.net>"]
edition = "2018"
[lib]
name = "ravenserver"
path = "src/lib.rs"
[dependencies]
rocket = "0.4.0"
mongodb = "0.3.11"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1.5"
lazy_static = "1.3.0"
rocket_failure = { version="0.1", features = ["with-rocket"] }
[dependencies.rocket_contrib]
version = "0.4.0"
features = ["mongodb_pool", "handlebars_templates"]