[package]
name = "ravenserver-rs"
version = "0.1.0"
authors = ["nicohman <nicohman@demenses.net>"]
edition = "2018"
[lib]
name = "ravenserver"
path = "src/lib.rs"
[dependencies]
rocket = { version = "0.4.0", features = ["tls"]}
jsonwebtoken = "5"
mongodb = "0.3.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bcrypt = "0.3"
rust-crypto = "0.2.36"
chrono = "0.4.6"
failure = "0.1.5"
lazy_static = "1.3.0"
reqwest = "0.9.11"
rocket_failure = { version="0.1", features = ["with-rocket"] }
[dependencies.rocket_contrib]
version = "0.4.0"
features = ["mongodb_pool", "handlebars_templates"]
